--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,16 @@
 [project]
 name = "markdown-converter"
-version = "1.0.0"
-description = "A simple CLI tool to convert DOCX documents to Markdown using docling"
+version = "2.0.0"
+description = "A simple CLI tool to convert DOCX and PDF documents to Markdown using docling"
 readme = "spec.md"
 requires-python = ">=3.9"
 dependencies = [
     "docling>=2.0.0",
+    "pypdf2>=3.0.0",
 ]
 
 [project.scripts]
-convert-docx = "convert_docx:main"
+convert-documents = "convert_documents:main"
 
 [build-system]
 requires = ["hatchling"]
